syntax = "proto3";

package user;

// User service gRPC definition
service UserService {
  // Get user profile by auth ID
  rpc GetUserByAuthId(GetUserByAuthIdRequest) returns (UserResponse);

  // Get user profile by ID
  rpc GetUserById(GetUserByIdRequest) returns (UserResponse);

  // Update user profile
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
}

message GetUserByAuthIdRequest {
  string auth_id = 1;
}

message GetUserByIdRequest {
  string user_id = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  optional string name = 2;
  optional string avatar = 3;
  optional string bio = 4;
  optional string target_role = 5;
  optional string experience_level = 6;
  repeated string skills = 7;
}

message UserResponse {
  string id = 1;
  string auth_id = 2;
  string email = 3;
  string name = 4;
  string role = 5;
  UserProfile profile = 6;
  Subscription subscription = 7;
  bool is_active = 8;
}

message UserProfile {
  string avatar = 1;
  string bio = 2;
  string target_role = 3;
  string experience_level = 4;
  repeated string skills = 5;
}

message Subscription {
  string plan = 1;
  int32 interviews_used = 2;
  int32 interviews_limit = 3;
}
